feat: Changes of openapi & architecture clean to hexagonal , added compose & dockerfile , fixes and refactor code
