# src/main/java/com/pichincha/exam/users/infrastructure/output/repository/entity/Person.java
@@ -1,0 +1,38 @@
+package com.pichincha.exam.users.infrastructure.output.repository.entity;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.relational.core.mapping.Column;
+import org.springframework.data.relational.core.mapping.Table;
+
+import java.io.Serializable;
+
+
+@Table(name = "Person")
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+public class Person implements Serializable {
+    @Id
+    private Long id;
+
+    @Column("name")
+    private String name;
+
+    @Column("gender")
+    private Gender gender;
+
+    @Column("identification")
+    private String identification;
+
+    @Column("address")
+    private String address;
+
+    @Column("phone")
+    private String phone;
+}
