# src/main/resources/openapi.yaml
@@ -30,7 +30,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Client'
+                  $ref: '#/components/schemas/ClientResponse'
     post:
       tags:
         - Customer
@@ -42,14 +42,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Client'
+              $ref: '#/components/schemas/ClientRequest'
       responses:
         '201':
           description: Client created.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
 
   /customers/{userId}:
     get:
@@ -57,7 +57,7 @@ paths:
         - Customer
       summary: Get a customer by ID
       operationId: GetCustomerById
-      description: Get a customer by ID;
+      description: Get a customer by ID.
       parameters:
         - name: userId
           in: path
@@ -71,7 +71,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
         '404':
           description: User not found
 
@@ -93,14 +93,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Client'
+              $ref: '#/components/schemas/ClientRequest'
       responses:
         '200':
           description: Client updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
         '404':
           description: Client not found
 
@@ -138,7 +138,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Person'
+                  $ref: '#/components/schemas/PersonResponse'
     post:
       tags:
         - Person
@@ -150,41 +150,110 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Person'
+              $ref: '#/components/schemas/PersonRequest'
       responses:
         '201':
           description: Person created.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Person'
+                $ref: '#/components/schemas/PersonResponse'
 
 components:
   schemas:
-    Client:
+    ClientRequest:
       type: object
+      required:
+        - names
+        - address
       properties:
         names:
           type: string
-          description: names for client
+          minLength: 1
+          maxLength: 100
+          description: Names for client
           example: Jose Lema
         address:
           type: string
-          description: address for client
+          minLength: 1
+          maxLength: 200
+          description: Address for client
           example: Otavalo sn y principal
         phone:
           type: string
-          description: phone for client
+          pattern: '^\d{10}$'
+          description: Phone number for client
           example: 0986492314
         password:
           type: string
-          description: password for client
+          minLength: 6
+          maxLength: 20
+          description: Password for client
           example: "*******"
         status:
           type: boolean
-          description: status for client
-          example: True
-    Person:
+          description: Status for client
+          example: true
+
+    ClientResponse:
+      type: object
+      properties:
+        userId:
+          type: string
+          description: Unique identifier for the client
+        names:
+          type: string
+          description: Names of the client
+        address:
+          type: string
+          description: Address of the client
+        phone:
+          type: string
+          description: Phone number of the client
+        password:
+          type: string
+          description: Password for client (might be hidden in responses)
+        status:
+          type: boolean
+          description: Status for client
+
+    PersonRequest:
+      type: object
+      required:
+        - name
+        - gender
+        - identification
+        - address
+        - phone
+      properties:
+        name:
+          type: string
+          minLength: 1
+          maxLength: 100
+          description: Name of the person
+        gender:
+          type: string
+          enum:
+            - MALE
+            - FEMALE
+            - OTHER
+          description: Gender of the person
+        identification:
+          type: string
+          minLength: 1
+          maxLength: 20
+          description: Identification number or document of the person
+        address:
+          type: string
+          minLength: 1
+          maxLength: 200
+          description: Address of the person
+        phone:
+          type: string
+          pattern: '^\d{10}$'
+          description: Phone number of the person
+
+    PersonResponse:
       type: object
       properties:
         id:
@@ -210,9 +279,3 @@ components:
         phone:
           type: string
           description: Phone number of the person
-      required:
-        - name
-        - gender
-        - identification
-        - address
-        - phone
